--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alfred-tools",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -12,8 +12,8 @@
     "prepublishOnly": "npm run lint && npm run clean && npm run build",
     "lint": "eslint ./src/*"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["alfred", "workflow"],
+  "author": "liangzr <liangzr@outlook.comk>",
   "license": "ISC",
   "devDependencies": {
     "@types/fs-extra": "^8.1.0",
