--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "noImplicitAny": false,
-    "module": "es2015",
-    "target": "es5",
+    "module": "CommonJS",
+    "target": "ES2015",
     "allowJs": true,
     "lib": ["es5", "es2015", "dom"],
     "allowSyntheticDefaultImports": true,
